# nixnas

./: Cargo.toml  README.md  askama.toml  module.nix
.github/workflows/: rust.yml
src/: api.rs  auth.rs  error.rs  main.rs  nix.rs  state.rs  web.rs
src/commands/: acl.rs  btrfs.rs  filesystem.rs  mdadm.rs  mod.rs  runner.rs  samba.rs  smart.rs  zfs.rs
src/services/: metrics.rs  mod.rs  monitoring.rs  nfs.rs  notifications.rs  smart_cache.rs  smb.rs
static/: style.css
templates/: base.html  dashboard.html  login.html
templates/partials/: build_output.html  disk_selector.html
templates/services/: index.html  rsync.html  ssh.html
templates/shares/: nfs.html  nfs_edit.html  nfs_row.html  smb.html  smb_edit.html  smb_row.html
templates/storage/: btrfs.html  disks.html  raid.html  smart.html  zfs.html
templates/system/: index.html  notifications.html  settings.html
templates/users/: groups.html  index.html  settings.html  users.html
