[package]
name = "nixnas-daemon"
version = "1.0.3"
edition = "2024"
authors = ["liberodark"]
description = "NixOS NAS management daemon with web interface"
repository = "https://github.com/liberodark/nixnas"
license = "GPL-3.0"
keywords = ["nixos", "nas", "storage", "zfs", "samba"]
categories = ["command-line-utilities", "system-tools", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
dead_code = "deny"
